[gd_scene load_steps=2 format=3 uid="uid://dv6qb5ovv8n5a"]

[ext_resource type="Script" path="res://scenes/battle_phase.gd" id="1_37mkb"]

[node name="battle_phase" type="Node2D"]
script = ExtResource("1_37mkb")

[node name="PLAYERSTATS_MENU" type="Panel" parent="."]
offset_left = 1.0
offset_top = -1.0
offset_right = 239.0
offset_bottom = 648.0

[node name="p_stats" type="VBoxContainer" parent="PLAYERSTATS_MENU"]
layout_mode = 0
offset_top = 6.0
offset_right = 238.0
offset_bottom = 647.0
theme_override_constants/separation = 45
alignment = 1

[node name="head" type="Panel" parent="PLAYERSTATS_MENU/p_stats"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="img" type="Panel" parent="PLAYERSTATS_MENU/p_stats/head"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 53.0

[node name="life" type="ProgressBar" parent="PLAYERSTATS_MENU/p_stats/head"]
offset_left = 133.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 35.0

[node name="armor" type="Panel" parent="PLAYERSTATS_MENU/p_stats"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="img" type="Panel" parent="PLAYERSTATS_MENU/p_stats/armor"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 53.0

[node name="life" type="ProgressBar" parent="PLAYERSTATS_MENU/p_stats/armor"]
offset_left = 133.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 35.0

[node name="l_arm" type="Panel" parent="PLAYERSTATS_MENU/p_stats"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="img" type="Panel" parent="PLAYERSTATS_MENU/p_stats/l_arm"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 53.0

[node name="life" type="ProgressBar" parent="PLAYERSTATS_MENU/p_stats/l_arm"]
offset_left = 133.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 35.0

[node name="r_arm" type="Panel" parent="PLAYERSTATS_MENU/p_stats"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="img" type="Panel" parent="PLAYERSTATS_MENU/p_stats/r_arm"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 53.0

[node name="life" type="ProgressBar" parent="PLAYERSTATS_MENU/p_stats/r_arm"]
offset_left = 133.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 35.0

[node name="l_leg" type="Panel" parent="PLAYERSTATS_MENU/p_stats"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="img" type="Panel" parent="PLAYERSTATS_MENU/p_stats/l_leg"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 53.0

[node name="life" type="ProgressBar" parent="PLAYERSTATS_MENU/p_stats/l_leg"]
offset_left = 133.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 35.0

[node name="r_leg" type="Panel" parent="PLAYERSTATS_MENU/p_stats"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="img" type="Panel" parent="PLAYERSTATS_MENU/p_stats/r_leg"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 53.0

[node name="life" type="ProgressBar" parent="PLAYERSTATS_MENU/p_stats/r_leg"]
layout_mode = 0
offset_left = 133.0
offset_top = 6.0
offset_right = 177.0
offset_bottom = 35.0

[node name="BATTLE_MENU" type="Panel" parent="."]
offset_left = 253.0
offset_top = 4.0
offset_right = 1155.0
offset_bottom = 427.0

[node name="MC_POS" type="Node2D" parent="BATTLE_MENU"]
position = Vector2(568, 365)

[node name="ENEMY_POS" type="Node2D" parent="BATTLE_MENU"]
position = Vector2(529, 363)

[node name="ENEMYSTATS_MENU" type="Panel" parent="."]
offset_left = 253.0
offset_top = 435.0
offset_right = 1155.0
offset_bottom = 649.0
